fixed buefy style collapsed table rows when on mobile

--- a/ClientApp/src/components/shared/bulma.scss
+++ b/ClientApp/src/components/shared/bulma.scss
@@ -131,3 +131,71 @@ $positions: ('top', 'left', 'bottom', 'right');
         }
     }
 }
+
+// has-mobile-cards collapsed row support copied from Buefy
+// https://github.com/buefy/buefy/blob/dev/src/scss/components/_table.scss
+// check also '../../../node_modules/bulma/sass/elements/table.sass'
+.table {
+    &.has-mobile-cards {
+        width: 100%;
+        border: 1px solid transparent;
+        border-radius: $radius;
+        // border-collapse: separate;
+
+        @include mobile {
+            thead {
+                display: none;
+            }
+            tfoot {
+                th {
+                    border: 0; // Disable is-bordered
+                    display: inherit;
+                }
+            }
+            tr {
+                // Card style — Cannot extend inside media query
+                box-shadow: 0 2px 3px rgba($black, 0.1),
+                    0 0 0 1px rgba($black, 0.1);
+                max-width: 100%;
+                position: relative;
+                display: block;
+                td {
+                    border: 0; // Disable is-bordered
+                    display: inherit;
+                    &:last-child {
+                        border-bottom: 0;
+                    }
+                }
+                &:not(:last-child) {
+                    margin-bottom: 1rem;
+                }
+                // Disables is-*
+                &:not([class*='is-']) {
+                    background: inherit;
+                    &:hover {
+                        background-color: inherit;
+                    }
+                }
+                // &.detail {
+                //     margin-top: -1rem;
+                // }
+            }
+            // tr:not(.detail):not(.is-empty):not(.table-footer) {
+            tr {
+                td {
+                    display: flex;
+                    width: auto;
+                    justify-content: space-between;
+                    text-align: right;
+                    border-bottom: 1px solid $background;
+                    &:before {
+                        content: attr(data-label);
+                        font-weight: $weight-semibold;
+                        padding-right: 0.5em;
+                        text-align: left;
+                    }
+                }
+            }
+        }
+    }
+}
